# HLearn

./: Learn.cabal  stack.yaml
app/: HangMain.hs  Main.hs  Reader.hs  TwilioMain.hs  Vocabulary.hs  WebMain.hs
data/: dict.txt
src/: Demo.hs  Employee.hs  Lib.hs  Madlib.hs  Timex.hs  Web.hs
templates/: demo.html
test/: Spec.hs
