name: Learn
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Author name here
maintainer: example@example.com
homepage: https://github.com/githubuser/Learn#readme
category: Web
author: Author name here

source-repository head
    type: git
    location: https://github.com/githubuser/Learn

library
    exposed-modules:
        Lib
        Timex
        Web
        Demo
        Employee
        Madlib
    build-depends:
        base >=4.7 && <5,
        scotty -any,
        hastache -any,
        text -any,
        mtl -any,
        filepath -any,
        QuickCheck -any
    other-modules:
    default-language: Haskell2010
    hs-source-dirs: src
    default-extensions:
        MultiParamTypeClasses
        DuplicateRecordFields
        OverloadedStrings
        DatatypeContexts

executable Learn-exe
    main-is: Main.hs
    build-depends:
        base -any,
        Learn -any
    default-language: Haskell2010
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options:  -rtsopts -with-rtsopts=-N
    build-depends:
        errors >=2.2.2,
        mtl -any

executable Web-exe
    main-is: WebMain.hs
    build-depends:
        base -any,
        Learn -any
    default-language: Haskell2010
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options:  -rtsopts -with-rtsopts=-N

executable Hang-exe
    main-is: HangMain.hs
    build-depends:
        base -any,
        random >=1.1,
        split >=0.2.2
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N


executable Tw-exe
    main-is: TwilioMain.hs
    build-depends:
        base -any,
        twilio -any,
        transformers -any,
        bifunctors >=4,
        http-client >=0.4,
        http-client-tls >=0.2
    default-language: Haskell2010
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options:  -rtsopts -with-rtsopts=-N


test-suite Learn-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        Learn -any,
        hspec -any,
        QuickCheck -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
